--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             --text-dark: #222222;
             --gray-text: #8e8e93;
             --border-color: #e5e5e5;
+            /* Цвет фона твоего pin.png для бесшовной рамки */
+            --pin-bg-color: #f9f9f9; 
         }
 
         /* --- ПРЕЛОАДЕР --- */
@@ -36,30 +38,31 @@
         #product-modal.active .modal-content { transform: scale(1); }
         .modal-image { width: 100%; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); }
 
-        /* --- ЭКРАН ПИН-КОДА С РАМКОЙ --- */
+        /* --- ЭКРАН ПИН-КОДА С ЦВЕТНОЙ РАМКОЙ --- */
         #pin-screen {
             position: fixed; top: 100%; left: 0; width: 100%; height: 100%;
-            background: white; z-index: 6000; transition: top 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
+            background: var(--pin-bg-color); /* Теперь рамка того же цвета, что и фото */
+            z-index: 6000; transition: top 0.4s cubic-bezier(0.2, 0.8, 0.2, 1);
             display: flex; align-items: center; justify-content: center;
-            box-sizing: border-box; padding: 6px; /* Белая рамка */
+            box-sizing: border-box; padding: 8px; 
         }
         #pin-screen.active { top: 0; }
-        .pin-bg { width: 100%; height: 100%; object-fit: contain; border-radius: 10px; }
+        .pin-bg { width: 100%; height: 100%; object-fit: contain; }
 
-        /* --- FACE ID OVERLAY (Плавный блюр) --- */
+        /* --- FACE ID OVERLAY --- */
         #faceid-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(0px); -webkit-backdrop-filter: blur(0px);
             z-index: 6500; display: none; align-items: center; justify-content: center;
-            opacity: 0; transition: opacity 0.6s ease, backdrop-filter 0.6s ease, -webkit-backdrop-filter 0.6s ease;
+            opacity: 0; transition: opacity 0.6s ease, backdrop-filter 0.6s ease;
         }
         #faceid-overlay.active { 
             display: flex; opacity: 1; 
             backdrop-filter: blur(15px); -webkit-backdrop-filter: blur(15px);
         }
         .faceid-container {
-            width: 150px; height: 150px; border-radius: 35px; overflow: hidden; /* Закругление гифки */
+            width: 150px; height: 150px; border-radius: 35px; overflow: hidden;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
         .faceid-video { width: 100%; height: 100%; object-fit: cover; }
@@ -86,24 +89,20 @@
         .cancel-btn { display: none; color: var(--kaspi-red); font-weight: 500; cursor: pointer; }
         body.search-mode .cancel-btn { display: block; }
 
-        /* --- КОНТЕНТ --- */
-        .banners-container { background-color: white; padding: 5px 0 10px; }
-        .banners-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 8px; }
-        .banner-item { flex: 0 0 54%; aspect-ratio: 1080 / 680; border-radius: 12px; background-size: cover; background-position: center; }
-
+        /* --- СЕРВИСЫ --- */
         .services-grid { display: grid; grid-template-columns: repeat(4, 1fr); background: white; padding: 10px 5px 15px; gap: 20px 0; }
-        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
+        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; cursor: pointer; }
         .service-icon { width: 42px; height: 42px; object-fit: contain; }
         .service-name { font-size: 11.5px; font-weight: 700; color: #111; margin-top: 8px;}
 
+        /* --- ТОВАРЫ И БАННЕРЫ --- */
+        .banners-container { background-color: white; padding: 5px 0 10px; }
+        .banners-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 8px; }
+        .banner-item { flex: 0 0 54%; aspect-ratio: 1080 / 680; border-radius: 12px; background-size: cover; background-position: center; }
         .promo-scroll-area { margin-top: 12px; overflow-x: auto; padding-bottom: 10px; }
         .promo-grid-container { display: grid; grid-template-rows: repeat(2, 1fr); grid-auto-flow: column; grid-auto-columns: max-content; gap: 10px; padding: 0 15px; }
         .promo-card { background: white; border-radius: 14px; padding: 10px 15px; display: flex; align-items: center; gap: 10px; min-width: 210px; }
         .promo-img { width: 36px; height: 36px; object-fit: contain; }
-
-        .divider-line { height: 1px; background-color: var(--border-color); margin: 15px 15px 10px 15px; }
-        .section-title { font-size: 17px; font-weight: 800; margin: 0 15px 12px 15px; }
-
         .history-scroll { overflow-x: auto; padding-bottom: 20px; }
         .history-grid { display: grid; grid-template-rows: repeat(2, 1fr); grid-auto-flow: column; grid-auto-columns: 145px; gap: 10px; padding: 0 15px; }
         .product-card { background: white; border-radius: 12px; padding: 8px; display: flex; flex-direction: column; height: 190px; }
